# formula-ml

./: README.md  header.html  index.html  mails.html  mails.js  main.tex  meetings-prasad.html  meetings-prasad.js  meetings.html  meetings.js  news.js  project-process.html  project-process.js  router.js  style.css
documentation/: README.md  feeka.md  group_contract.md  prasad_meetings.md  progress_report.md
documentation/diary/: 160118.md
documentation/halftime/: notes.md
documentation/literature/: README.md  To read.md
documentation/log/: week01.md  week02.md  week03.md  week04.md  week04.tex  week05.md  week06.md  week06.tex  week07.md  week08.md  week09.md  week10.md  week10.tex  week11.md  week11.tex  week12.md  week13.md  week14.md  week15.md  week15.tex  week16.md  week17.md  week18.md  week19.md  week20.md
documentation/mails/: 160307.md  20151215.md  20160124.md  20160125.md  20160201.md  20160212.md  (+1 more)
formula-ml/: .gitignore  CMakeLists.txt  Main.cpp  NeatTrainer.cpp  NeatTrainer.h  NeatXOR.cpp  NeatXOR.h  Readme.md  SimulationState.cpp  SimulationState.h  formula-ml.sln  formula-ml.vcxproj  formula-ml.vcxproj.filters
formula-ml/core/: Keyboard.cpp  Keyboard.h  Window.cpp  Window.h  WindowState.h
formula-ml/core/gfx/: Curve.cpp  Curve.h  Framebuffer.cpp  Framebuffer.h  Model.cpp  Model.h  Program.cpp  Program.h  Renderer.h  Texture.cpp  Texture.h
formula-ml/core/gui/: Font.cpp  Font.h  View.cpp  View.h
formula-ml/core/util/: Camera.cpp  Camera.h  GLUtil.cpp  GLUtil.hpp  ImageIO.cpp  ImageIO.h  OrthoCamera.cpp  OrthoCamera.h  PerspCamera.cpp  Random.cpp  Random.h  Util.cpp  Util.h
formula-ml/experiments/: Experiment.h  ExperimentWindow.cpp  ExperimentWindow.h  FixedNetworkMidline.cpp  FixedNetworkMidline.h  ManualControl.cpp  ManualControl.h  NEATNetworkGridTrack.cpp  NEATNetworkGridTrack.h  NEATNetworkMidline.cpp  NEATNetworkMidline.h  NEATNetworkXOR.cpp  NEATNetworkXOR.h  NetworkView.cpp  NetworkView.h  RacelineLogger.cpp  RacelineLogger.h  RacelineRenderer.cpp  RacelineRenderer.h  SimulationEvaluator.cpp  SimulationEvaluator.h  StandardRenderer.cpp  StandardRenderer.h  VisualisationWindow.cpp  VisualisationWindow.h
formula-ml/experiments/AlternatingTrackExperiment/: AlternatingTrackExperiment.cpp  AlternatingTrackExperiment.h
formula-ml/experiments/FixedNetworkMidline/: FixedNetworkMidline.cpp  FixedNetworkMidline.h
formula-ml/experiments/ManualControl/: ManualControl.cpp  ManualControl.h
formula-ml/experiments/MultipleTrackExperiment/: MultipleTrackExperiment.cpp  MultipleTrackExperiment.h
formula-ml/experiments/NEATNetworkMidline/: NEATNetworkMidline.cpp  NEATNetworkMidline.h
formula-ml/experiments/NeatCurveDataExperiment/: NeatCurveDataExperiment.cpp  NeatCurveDataExperiment.h
formula-ml/experiments/VisualisePool/: VisualisePool.cpp  VisualisePool.h
formula-ml/experiments/xor/: XORExperiment.cpp  XORExperiment.h
formula-ml/neural/: EvolvingNetwork.cpp  EvolvingNetwork.h  FileWriter.cpp  FileWriter.h  FixedNetwork.cpp  FixedNetwork.h  FixedNetworkTrainer.cpp  FixedNetworkTrainer.h  FixedNetworkXOR.cpp  FixedNetworkXOR.h  Helpers.cpp  Helpers.h  Neural.h  ResultWriter.cpp  ResultWriter.h
formula-ml/neural/neat/: Constants.cpp  Constants.h  Gene.cpp  Gene.h  Genome.cpp  Genome.h  Network.cpp  Network.h  Pool.cpp  Pool.h  Species.cpp  Species.h  Trainer.cpp  Trainer.h
formula-ml/res/fonts/: comic.fnt  georgia.fnt  helvetica.fnt
formula-ml/res/models/: car.model  circuit_narrow.model  circuit_normal.model  circuit_normal_mirrored.model  custom.model  custom_circuit.model  spa_circuit.model
formula-ml/res/models/corners/: corner_180_l.model  corner_180_l_new.model  corner_180_r.model  corner_180_r_new.model  corner_30_l.model  corner_30_r.model  corner_90_10_l.model  corner_90_10_r.model
formula-ml/res/shaders/: circle.frag  simple.frag  simple.vert  text.frag  text.vert
formula-ml/sim/: Car.cpp  Car.h  SimulationRenderer.h  SimulationState.cpp  SimulationState.h  Simulator.cpp  Simulator.h  Track.cpp  Track.h
formula-ml/sim/model/: CarModel.cpp  CarModel.h  TrackModel.cpp  TrackModel.h
formula-ml/sim/view/: CarView.cpp  CarView.h  GridView.cpp  GridView.h  TrackView.cpp  TrackView.h
mails/: 160125.md  160222.md  20160216.md  20160229.md  20160309.md  20160311.md  20160323.md  20160403.md  20160417.md  20160421.md  20160503.md  20160506.md  2016160216.md
news/: 2015-12-20-hello-world.md
planning-report/: 02_background.tex  04_problem.tex  06_method.tex
report/: 00_abstract.tex  00_title.tex  00_vocab.tex  01_abstract.tex  01_background.tex  01_introduction.tex  02_background.tex  02_introduction.tex  02_purpose.tex  02_theory.tex  03_method.tex  03_problem.tex  03_purpose.tex  03_vocab.tex  04_limitation.tex  04_method.tex  04_problem.tex  04_result.tex  05_discussion.tex  05_limitation.tex  05_result.tex  05_summary.tex  06_method.tex  06_result.tex  06_summary.tex  07_schedule.tex  abstract.tex  background.tex  bibliography.bib  chapter1.tex  limitation.tex  method.tex  problem.tex  purpose.tex  schedule.tex  title.tex  xx_discussion.tex
(+65 files in other folders)
